--- a/BlazorDate/Client/Shared/PersonList.razor
+++ b/BlazorDate/Client/Shared/PersonList.razor
@@ -6,7 +6,7 @@
         <li class="oi-media-pause my-3">
             <div class="media-img-wrapper mr-2">
                 <a href="#">
-                    <img class="media-img" src="@person.Picture" />
+                    @*<img class="media-img" src="@person.Name" />*@
                 </a>
             </div>
             <div class="media-body">
