--- a/BlazorDate/Client/Pages/Index.razor
+++ b/BlazorDate/Client/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Folks</PageTitle>
+<PageTitle>People</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>BlazorDate</h1>
 
 <PersonList />
