--- a/BlazorDate/Client/_Imports.razor
+++ b/BlazorDate/Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using BlazorDate.Client.Shared
 @using BlazorDate.Shared
 @using BlazorDate.Shared.Models
+@using BlazorDate.Client.Services.PersonService
