GenderService client side

--- a/BlazorDate/Client/_Imports.razor
+++ b/BlazorDate/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using BlazorDate.Shared
 @using BlazorDate.Shared.Models
 @using BlazorDate.Client.Services.PersonService
+@using BlazorDate.Client.Services.GenderService
