--- a/BlazorDate/Client/Shared/PersonList.razor
+++ b/BlazorDate/Client/Shared/PersonList.razor
@@ -1,4 +1,5 @@
 ﻿@inject IPersonService PersonService
+@implements IDisposable
 
 @if (PersonService.People == null || PersonService.People.Count == 0)
 {
@@ -28,8 +29,14 @@ else
 }
 
 @code {
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
-        await PersonService.GetPeopleAsync();
+        //await PersonService.GetPeople();
+        PersonService.PeopleChanged += StateHasChanged;
+    }
+
+    public  void Dispose()
+    {
+        PersonService.PeopleChanged -= StateHasChanged;
     }
 }
