--- a/BlazorDate/Client/Pages/PersonDetails.razor
+++ b/BlazorDate/Client/Pages/PersonDetails.razor
@@ -15,7 +15,7 @@ else
             <img class="media-img" alt="@person.Nick" />
         </div>
         <div>
-            @person.Description
+            @person.ProfileText
         </div>
         <div>
             @*TODO perhaps preferences here*@
