--- a/BlazorDate/Client/Shared/PersonList.razor
+++ b/BlazorDate/Client/Shared/PersonList.razor
@@ -21,7 +21,7 @@ else
                         <h4 class="mb-0">@person.Nick</h4>
                     </a>
                     <h5>@person.Name</h5>
-                    <p>@person.Description</p>
+                    <p>@person.ProfileText</p>
                 </div>
             </li>
         }
