--- a/BlazorDate/Client/Pages/PersonDetails.razor
+++ b/BlazorDate/Client/Pages/PersonDetails.razor
@@ -9,10 +9,17 @@ else
 {
     <div class="media">
         <div class="media-img-wrapper mr-2">
-            <img class="media-img" src="picture.Url" />
+            @if (person.Pictures.Count > 0)
+            {
+                <img class="media-img" src="@person.Pictures[0].Data" />
+            }
+            else
+            {
+                <img class="media-img" src="nopicture.jfif" alt="@person.Nick" />
+            }
         </div>
-        <div>
-            <img class="media-img" alt="@person.Nick" />
+        <div class="h3">
+            @person.Nick
         </div>
         <div>
             @person.ProfileText
