--- a/BlazorDate/Client/_Imports.razor
+++ b/BlazorDate/Client/_Imports.razor
@@ -12,3 +12,4 @@
 @using BlazorDate.Shared.Models
 @using BlazorDate.Client.Services.PersonService
 @using BlazorDate.Client.Services.GenderService
+@using BlazorDate.Client.Services.PreferenceService
