--- a/BlazorDate/Client/Pages/AdminPreferences.razor
+++ b/BlazorDate/Client/Pages/AdminPreferences.razor
@@ -8,6 +8,7 @@
 <div class="header">
     <div class="col">Name</div>
     <div class="col">Description</div>
+    <div class="col">Category</div>
     <div class="col"></div>
 </div>
 
@@ -22,6 +23,9 @@
                 </div>
                 <div class="col">
                     <InputText @bind-Value="editingPreference.Description" class="form-control"></InputText>
+                </div>
+                <div class="col">
+                    <InputText @bind-Value="editingPreference.Category" class="form-control"></InputText>
                 </div>
                 <div class="col">
                     <button type="submit" class="btn btn-primary">
@@ -42,6 +46,9 @@
             </div>
             <div class="col">
                 @preference.Description
+            </div>
+            <div class="col">
+                @preference.Category
             </div>
             <div class="col">
                 <button class="btn btn-primary" @onclick="(() => EditPreference(preference))">
