--- a/BlazorDate/Client/Shared/NavMenu.razor
+++ b/BlazorDate/Client/Shared/NavMenu.razor
@@ -17,14 +17,23 @@
             </NavLink>
         </div>
 
-        @foreach (var gender in GenderService.Genders)
+        if(GenderService.Genders != null)
         {
-            <div class="nav-item px-3">
-                <NavLink class="nav-link" href="@gender.Url">
-                    @gender.Name
-                </NavLink>
-            </div>
+            @foreach (var gender in GenderService.Genders)
+            {
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="@gender.Url">
+                        @gender.Name
+                    </NavLink>
+                </div>
+            }
         }
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/adminpreferences">
+                Admin Preferences
+            </NavLink>
+        </div>
 
     </nav>
 </div>
