--- a/BlazorDate/Client/Pages/Admin/AdminPreferences.razor
+++ b/BlazorDate/Client/Pages/Admin/AdminPreferences.razor
@@ -1,4 +1,4 @@
-﻿@page "/adminpreferences"
+﻿@page "/admin/adminpreferences"
 @inject IPreferenceService PreferenceService
 @inject NavigationManager NavigationManager
 @implements IDisposable
