--- a/BlazorDate/Client/Pages/Admin/AdminPreferences.razor.css
+++ b/BlazorDate/Client/Pages/Admin/AdminPreferences.razor.css
@@ -1,7 +1,7 @@
 ﻿.header {
     display: flex;
     font-weight: 600;
-    text-align: center;
+    text-align: left;
     border-bottom: 1px solid lightgray;
     margin-bottom: 6px;
     padding-bottom: 6px;
