--- a/BlazorDate/Client/Shared/NavMenu.razor
+++ b/BlazorDate/Client/Shared/NavMenu.razor
@@ -30,7 +30,7 @@
         }
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/adminpreferences">
+            <NavLink class="nav-link" href="/admin/adminpreferences">
                 Admin Preferences
             </NavLink>
         </div>
