--- a/BlazorDate/Client/_Imports.razor
+++ b/BlazorDate/Client/_Imports.razor
@@ -13,3 +13,4 @@
 @using BlazorDate.Client.Services.PersonService
 @using BlazorDate.Client.Services.GenderService
 @using BlazorDate.Client.Services.PreferenceService
+@using BlazorDate.Client.Services.SeriousnessService
