--- a/BlazorDate/Client/Shared/NavMenu.razor
+++ b/BlazorDate/Client/Shared/NavMenu.razor
@@ -35,6 +35,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/admin/adminseriousness">
+                Admin Levels
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
