Fixed small navigation bug

--- a/BlazorDate/Client/Shared/NavMenu.razor
+++ b/BlazorDate/Client/Shared/NavMenu.razor
@@ -17,7 +17,7 @@
             </NavLink>
         </div>
 
-        if(GenderService.Genders != null)
+        @if(GenderService?.Genders != null)
         {
             @foreach (var gender in GenderService.Genders)
             {
