Bugfix misspelled api call

--- a/BlazorDate/Client/Pages/PersonDetails.razor
+++ b/BlazorDate/Client/Pages/PersonDetails.razor
@@ -27,6 +27,9 @@ else
         <div>
             @*TODO perhaps preferences here*@
         </div>
+        <div>
+
+        </div>
     </div>
 }
 
