PersonDetails to edit link

--- a/BlazorDate/Client/Pages/PersonDetails.razor
+++ b/BlazorDate/Client/Pages/PersonDetails.razor
@@ -28,7 +28,7 @@ else
             @*TODO perhaps preferences here*@
         </div>
         <div>
-
+            <a href="/editperson/@person.PersonId">Edit</a>
         </div>
     </div>
 }
